# DockerCompose

./: .dockerignore  .gitignore  CLAUDE.md  README.md  default.env  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: claude-code-review.yml  claude.yml  integration-tests.yml
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: Calculator.vue  FileManager.vue  LoginView.vue
frontend/src/utils/: api.js  file.js  format.js
services/calc/: Dockerfile  pyproject.toml
services/calc/calc/: __init__.py  app.py
services/database/: Dockerfile  pyproject.toml
services/database/database/: __init__.py  app.py  db.py  validation.py
services/database/database/routes/: __init__.py  nodes.py  queries.py  relationships.py  utils.py
services/echo/: Dockerfile  pyproject.toml
services/echo/echo/: __init__.py  app.py  insecure.py
services/fileshare/: Dockerfile  pyproject.toml
services/fileshare/fileshare/: __init__.py  app.py  config.py  db_client.py  person_utils.py  validation.py
services/fileshare/fileshare/routes/: files.py  persons.py
tests/: Dockerfile  conftest.py  pyproject.toml  test_integration.py
