[project]
name = "docker-compose-demo-dev"
version = "0.1.0"
description = "Dev environment for Docker Compose demo project"
requires-python = ">=3.11"
dependencies = [
    "calc",
    "database",
    "fileshare",
]

[tool.uv.sources]
calc = { path = "services/calc" }
database = { path = "services/database" }
fileshare = { path = "services/fileshare" }
